# nkuai_IntelligentProjectWork

./: .gitmodules  readme.md
AMCL蒙特卡洛定位模块/代码/: ExampleHelperAMCLVisualization.m  ExampleHelperAMCLWanderer.m  ForkLiftAmclDemo.m  HouseMap.mat  pgmProcess.m
ICP代码/: ICPSimulation.m
ROS模块/my_robot_description/launch/: my_robot_rviz.launch
ROS模块/my_robot_description/urdf/: my_robot.urdf
SLAM建图模块/代码/: ForkLiftSlamDemo.m  MyScan.mat
定点控制器代码与支撑材料/代码/: FixedPointControllerExample.m
实验使用的ROS模块/my_robot_description/urdf/: my_robot.gv
实验使用的ROS模块/my_robot_gazebo/: CMakeLists.txt
实验使用的ROS模块/my_robot_gazebo/launch/: my_robot_world.launch
里程计代码与支撑材料/代码/非高斯模型/: NotGaussianPropagation.m
里程计代码与支撑材料/代码/高斯模型/: CarlibrationEpsCalc.m  ellipse.m
